tests/macros/password/default.rs
fn main() {
    let q = inquisition::questions![password { default: todo!() }];
}
